--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,16 @@
 <h1>{{title}}</h1>
-<h2>{{hero.name}} details!</h2>
-<div>
-  <label>id: </label>{{hero.id}}
-</div>
-<div>
+
+<h2>My Heroes</h2>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes" [class.selected]="hero === selectedHero" (click)="onSelect(hero)">
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
+  </li>
+</ul>
+<div *ngIf=selectedHero>
+  <h2>{{hero.name}} details!</h2>
+  <div>
+    <label>id: </label>{{selectedHero.id}}
+  </div>
   <label>name: </label>
-  <input [(ngModel)]="hero.name" placeholder="name">
+  <input [(ngModel)]="selectedHero.name" placeholder="name">
 </div>
