--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,5 @@
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
-<div *ngIf=selectedHero>
-  <h2>{{hero.name}} details!</h2>
-  <div>
-    <label>id: </label>{{selectedHero.id}}
-  </div>
-  <label>name: </label>
-  <input [(ngModel)]="selectedHero.name" placeholder="name">
-</div>
+<hero-detail [hero]="selectedHero"></hero-detail>
+
